Updated with simpler displayResult function

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">OMG! You will not believe me but...</h1>
       <h1 id="theExcuse">My dog ate my homework!</h1>
+      <button id="generateExcuse" class="btn btn-primary mt-3">
+        Generate New Excuse
+      </button>
       <div class="fixed-bottom p-4">
         Made with ❤️ by DS
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
